[package]
name = "sandengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "sandengine-core",
    "sandengine-lang"
]
exclude = [
    "shaders"
]

[dependencies]
sandengine-core = {path = "sandengine-core"}
sandengine-lang = {path = "sandengine-lang"}
