[package]
name = "sandengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "sandengine-core",
    "sandengine-lang",
    "tests"
]
exclude = [
    "shaders"
]

[dependencies]
colored = "2.0.4"
sandengine-core = {path = "sandengine-core"}
sandengine-lang = {path = "sandengine-lang"}

[build-dependencies]
copy_to_output = "1.0"
glob = "0.3"