[package]
name = "sandengine-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32.1"
rand = "0.8.5"
imgui = "0.11.0"
imgui-glium-renderer = "0.11.0"
imgui-winit-support = "0.11.0"
image = "0.24.6"
nphysics2d = "0.24.0"
rayon = "1.7.0"
