[package]
name = "sandengine-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = {git = "https://github.com/glium/glium.git", branch = "master"}
winit = {version = "0.28.6"}
rand = "0.8.5"
image = "0.24.6"
nphysics2d = "0.24.0"
rayon = "1.7.0"
sandengine-lang = {path = "../sandengine-lang"}
wrapped2d = "0.4.1"
